Fix broken push from SLAFUR

--- a/res/layout/challenge.xml
+++ b/res/layout/challenge.xml
@@ -8,18 +8,30 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Challenge player"
-            android:id="@+id/challengePlayer" android:layout_gravity="center_horizontal"
+            android:id="@+id/challengePlayer"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/flat_selector"
+            android:textColor="#ffffff"
+            android:layout_margin="5dp"
             android:onClick="buttonClick"/>
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Challenge team"
-            android:id="@+id/challengeTeam" android:layout_gravity="center_horizontal"
+            android:id="@+id/challengeTeam"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/flat_selector"
+            android:textColor="#ffffff"
+            android:layout_margin="5dp"
             android:onClick="buttonClick"/>
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="My challenges"
-            android:id="@+id/myChallenges" android:layout_gravity="center_horizontal"
+            android:id="@+id/myChallenges"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/flat_selector"
+            android:textColor="#ffffff"
+            android:layout_margin="5dp"
             android:onClick="buttonClick"/>
 </LinearLayout>
