--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -94,21 +94,23 @@
                     android:layout_height="80dip"
                     android:layout_centerHorizontal="true"
                     android:gravity="center_vertical"
-                    android:layout_marginTop="30dp"
-
+                    android:layout_marginTop="25dp"
                     android:background="@drawable/ic_action_settings" />
             <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/imageButton"
                     android:layout_centerHorizontal="true"
-                    android:gravity="center"
+                    android:layout_marginTop="95dp"
+
                     android:textSize="15sp"
                     android:textColor="#ffffff"
                     android:text="Settings" />
 
+
         </RelativeLayout>
+        <!--
+        android:layout_alignBottom="@+id/imageButton"-->
         <!--<Button
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
