--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:text="Login"
                 android:id="@+id/login"
-                android:layout_above="@+id/signup" android:layout_alignParentStart="true"
+                android:layout_above="@+id/login" android:layout_alignParentStart="true"
                 android:onClick="login"/>
         <Button
                 android:layout_width="fill_parent"
