--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:orientation="horizontal"
-            android:layout_weight="1" >
+            android:layout_weight="0.4" >
         <Button
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
@@ -17,10 +17,17 @@
                 android:id="@+id/pickupMatch"
                 android:onClick="signUpForPickup"
                 android:background="@drawable/flat_selector"
-                android:layout_margin="5dp"
+                android:layout_margin="1dp"
                 android:textColor="#ffffff"
+                android:drawableLeft="@drawable/lightning"
                 android:layout_weight="1" />
+    </LinearLayout>
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:orientation="horizontal"
+            android:layout_weight="0.4" >
         <Button
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
@@ -28,17 +35,16 @@
                 android:id="@+id/challenge"
                 android:onClick="buttonClick"
                 android:background="@drawable/flat_selector"
-                android:layout_margin="5dp"
+                android:layout_margin="1dp"
                 android:textColor="#ffffff"
-                android:layout_weight="1"/>
+                android:layout_weight="0.5"/>
     </LinearLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:orientation="horizontal"
-            android:layout_weight="1" >
-
+            android:layout_weight="0.4" >
         <Button
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
@@ -46,9 +52,25 @@
                 android:id="@+id/matches"
                 android:onClick="buttonClick"
                 android:background="@drawable/flat_selector"
-                android:layout_margin="5dp"
+                android:layout_margin="1dp"
                 android:textColor="#ffffff"
-                android:layout_weight="1" />
+                android:layout_weight="0.5" />
+    </LinearLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:orientation="horizontal"
+            android:layout_weight="0.5" >
+        <Button
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:text="Competitions"
+                android:id="@+id/competitions"
+                android:onClick="buttonClick"
+                android:background="@drawable/flat_selector"
+                android:layout_margin="1dp"
+                android:textColor="#ffffff"
+                android:layout_weight="0.5" />
 
         <Button
                 android:layout_width="0dip"
@@ -57,57 +79,33 @@
                 android:id="@+id/teams"
                 android:onClick="buttonClick"
                 android:background="@drawable/flat_selector"
-                android:layout_margin="5dp"
+                android:layout_margin="1dp"
                 android:textColor="#ffffff"
-                android:layout_weight="1"/>
+                android:layout_weight="0.5"/>
     </LinearLayout>
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:orientation="horizontal"
-            android:layout_weight="1" >
+            android:layout_weight="0.5" >
 
-        <Button
+       <Button
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
-                android:text="Competitions"
-                android:id="@+id/competitions"
+                android:text="Settings"
+                android:id="@+id/settings"
                 android:onClick="buttonClick"
                 android:background="@drawable/flat_selector"
-                android:layout_margin="5dp"
+                android:layout_margin="1dp"
                 android:textColor="#ffffff"
-                android:layout_weight="1" />
-        <RelativeLayout
-                android:id="@+id/settings"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_centerHorizontal="true"
-                android:clickable="true"
-                android:layout_margin="5dp"
-                android:background="@drawable/flat_selector">
-            <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="80dip"
-                    android:layout_height="80dip"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center_vertical"
-                    android:layout_marginTop="25dp"
-                    android:text="Settings"
-                    android:background="@drawable/ic_action_settings"
-                   />
+                android:drawableTop="@drawable/ic_action_settings"
+                android:paddingTop="20dip"
+                android:drawablePadding="-10dip"
+                android:layout_weight="0.5"/>
 
-        </RelativeLayout>
-    <Button android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:text="Log out"
-            android:id="@+id/logout"
-            android:onClick="logout"
-            android:background="@drawable/flat_selector"
-            android:layout_margin="5dp"
-            android:textColor="#ffffff"
-            android:layout_weight="1" />
+
+     
 
         <!--
         android:layout_alignBottom="@+id/imageButton"-->
