--- a/res/layout/quickmatch.xml
+++ b/res/layout/quickmatch.xml
@@ -20,7 +20,7 @@
             android:background="@drawable/flat_selector"
             android:textColor="#ffffff"
             android:layout_margin="5dp"
-            android:onClick="leaveQuickMatch" />
+            android:onClick="onButtonClick" />
     <ListView
             android:id="@+id/player_list"
             android:layout_width="match_parent"
