--- a/res/layout/quickmatch.xml
+++ b/res/layout/quickmatch.xml
@@ -21,9 +21,20 @@
             android:textColor="#ffffff"
             android:layout_margin="5dp"
             android:onClick="onButtonClick" />
+    <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="New CheckBox"
+            android:id="@+id/checkBox" android:layout_gravity="right"/>
     <ListView
             android:id="@+id/player_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
     </ListView>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test"
+            android:id="@+id/info" android:layout_gravity="center_horizontal"
+            />
 </LinearLayout>
