--- a/res/layout/registerteammatch.xml
+++ b/res/layout/registerteammatch.xml
@@ -24,7 +24,7 @@
 
         <Spinner
                 android:layout_width="0dip"
-                android:layout_height="wrap_content"
+                android:layout_height="50dip"
                 android:id="@+id/WinningTeam"
                 android:background="@drawable/flat_selector"
                 android:textColor="#ffffff"
@@ -50,7 +50,7 @@
 
         <Spinner
                 android:layout_width="0dip"
-                android:layout_height="wrap_content"
+                android:layout_height="50dip"
                 android:id="@+id/LosingTeam"
                 android:background="@drawable/flat_selector"
                 android:textColor="#ffffff"
