--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -12,7 +12,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/username"
                 android:hint="Username"
-                android:layout_marginTop="136dp" android:layout_alignParentTop="true"
+                android:layout_above="@+id/password"
                 android:layout_alignParentStart="true"/>
         <EditText
                 android:layout_width="fill_parent"
@@ -21,21 +21,48 @@
                 android:ems="10"
                 android:id="@+id/password"
                 android:hint="password"
-                android:layout_below="@+id/username" android:layout_alignParentStart="true"/>
+                android:layout_above="@+id/login"
+                android:layout_alignParentStart="true"/>
         <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Login"
                 android:id="@+id/login"
-                android:layout_above="@+id/login" android:layout_alignParentStart="true"
-                android:onClick="login"/>
+                android:onClick="login"
+                android:layout_above="@+id/signup"
+                android:background="@drawable/flat_selector"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="97dp"/>
         <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign up"
                 android:id="@+id/signup"
-                android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
-                android:onClick="signUp"/>
+                android:onClick="signUp"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/flat_selector"
+                android:layout_alignParentStart="true"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:src="@drawable/rufoos_logo_1920"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_above="@+id/username"
+                android:layout_alignParentEnd="true"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Not already a user? Sign up!"
+                android:id="@+id/textView"
+                android:layout_above="@+id/signup"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentStart="true"/>
     </RelativeLayout>
 </LinearLayout>
 
