--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -3,6 +3,7 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+
         >
     <RelativeLayout
             android:layout_width="match_parent"
@@ -30,6 +31,7 @@
                 android:id="@+id/login"
                 android:onClick="login"
                 android:layout_above="@+id/signup"
+                android:textColor="#ffffff"
                 android:background="@drawable/flat_selector"
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="97dp"/>
@@ -39,6 +41,7 @@
                 android:text="Sign up"
                 android:id="@+id/signup"
                 android:onClick="signUp"
+                android:textColor="#ffffff"
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/flat_selector"
                 android:layout_alignParentStart="true"/>
