--- a/res/layout/signup.xml
+++ b/res/layout/signup.xml
@@ -44,15 +44,21 @@
                 android:layout_height="wrap_content"
                 android:text="Cancel"
                 android:id="@+id/cancel"
-                android:layout_above="@+id/signup" android:layout_alignParentStart="true"
-                android:onClick="signUp"/>
+                android:textColor="#ffffff"
+                android:background="@drawable/flat_selector"
+                android:onClick="signUp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"/>
         <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign up"
                 android:id="@+id/signup"
-                android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
-                android:onClick="signUp"/>
+                android:textColor="#ffffff"
+                android:background="@drawable/flat_selector"
+                android:onClick="signUp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"/>
 
     </RelativeLayout>
 </LinearLayout>
