--- a/res/layout/registerexhibitionmatch.xml
+++ b/res/layout/registerexhibitionmatch.xml
@@ -21,15 +21,22 @@
                 android:text="Winner"
                 android:layout_weight="0.3"
                 android:id="@+id/textView2"/>
+        <Spinner
+                android:layout_width="0dip"
+                android:layout_height="50dip"
+                android:id="@+id/winningUser1"
+                android:background="@drawable/flat_selector"
+                android:textColor="#000000"
+                android:layout_weight="0.48"/>
+        <Spinner
+                android:layout_width="0dip"
+                android:layout_height="50dip"
+                android:id="@+id/winningUser2"
+                android:background="@drawable/flat_selector"
 
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText1" android:layout_gravity="center_vertical" android:layout_weight="0.47"/>
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText2" android:layout_gravity="center_vertical" android:layout_weight="0.59"/>
+                android:textColor="#000000"
+                android:layout_weight="0.47"/>
+
     </LinearLayout>
     <LinearLayout
             android:layout_width="match_parent"
@@ -49,14 +56,20 @@
                 android:layout_weight="0.3"
                 android:id="@+id/textView3"/>
 
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText3" android:layout_gravity="center_vertical" android:layout_weight="0.71"/>
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText4" android:layout_gravity="center_vertical" android:layout_weight="0.83"/>
+        <Spinner
+                android:layout_width="0dip"
+                android:layout_height="50dip"
+                android:id="@+id/losingUser1"
+                android:background="@drawable/flat_selector"
+                android:textColor="#000000"
+                android:layout_weight="0.47"/>
+        <Spinner
+                android:layout_width="0dip"
+                android:layout_height="50dip"
+                android:id="@+id/losingUser2"
+                android:background="@drawable/flat_selector"
+                android:textColor="#000000"
+                android:layout_weight="0.50"/>
     </LinearLayout>
     <LinearLayout
             android:layout_width="match_parent"
