--- a/res/layout/registerexhibitionmatch.xml
+++ b/res/layout/registerexhibitionmatch.xml
@@ -57,7 +57,7 @@
 
         <TextView
                 android:layout_width="0dip"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:layout_margin="1dip"
                 android:textAlignment="center"
