--- a/res/layout/quickmatch.xml
+++ b/res/layout/quickmatch.xml
@@ -9,33 +9,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="You have been signed up for a Quick Match, please wait for game to fill up"
-            android:id="@+id/quickmatchSignupText" android:layout_gravity="center_horizontal"
-            />
-    <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Leave Quick Match"
-            android:id="@+id/leaveQuickmatch"
+            android:id="@+id/quickmatchSignupText"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/flat_selector"
-            android:textColor="#ffffff"
-            android:layout_margin="5dp"
-            android:onClick="onButtonClick" />
-    <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:text="New CheckBox"
-            android:id="@+id/checkBox" android:layout_gravity="right"/>
-<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+            />
+    <TextView android:id="@+id/win_text"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="win"
+              android:layout_gravity="right"
+              android:visibility="invisible"/>
+
+<LinearLayout android:layout_width="match_parent"
+              android:layout_height="wrap_content">
     <ListView
             android:id="@+id/player_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="4">
-
-
     </ListView>
-    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
+    <LinearLayout
+                  android:id="@+id/checkbox_wrapper"
+                  android:orientation="vertical"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:visibility="invisible"
+                  >
         <CheckBox android:id="@+id/checkbox_p1"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
@@ -64,26 +62,29 @@
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Under the table?"
-                      android:onClick="onCheckboxClicked"/>
+                      android:onClick="onCheckboxClicked"
+                      android:visibility="invisible"/>
     </LinearLayout>
 </LinearLayout>
-
-
     <Button
+            android:id="@+id/sendResults"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Submit Results"
-            android:id="@+id/sendResults"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/flat_selector"
             android:textColor="#ffffff"
             android:layout_margin="5dp"
-            android:onClick="submitResults" />
-
-    <TextView
-            android:layout_width="wrap_content"
+            android:onClick="submitResults"
+            android:visibility="invisible"/>
+    <Button
+            android:id="@+id/leaveQuickmatch"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Test"
-            android:id="@+id/info" android:layout_gravity="center_horizontal"
-            />
+            android:text="Leave Quick Match"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/flat_selector"
+            android:textColor="#ffffff"
+            android:layout_margin="5dp"
+            android:onClick="onButtonClick" />
 </LinearLayout>
