big push, hope not broken

--- a/res/layout/challenge.xml
+++ b/res/layout/challenge.xml
@@ -7,7 +7,7 @@
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Challenge player"
+            android:text="Register Match"
             android:id="@+id/challengePlayer"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/flat_selector"
@@ -17,21 +17,12 @@
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Challenge team"
+            android:text="Register Team Match"
             android:id="@+id/challengeTeam"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/flat_selector"
             android:textColor="#ffffff"
             android:layout_margin="1dp"
             android:onClick="buttonClick"/>
-    <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="My challenges"
-            android:id="@+id/myChallenges"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/flat_selector"
-            android:textColor="#ffffff"
-            android:layout_margin="1dp"
-            android:onClick="buttonClick"/>
+
 </LinearLayout>
