--- a/res/layout/signup.xml
+++ b/res/layout/signup.xml
@@ -47,8 +47,7 @@
                 android:textColor="#ffffff"
                 android:background="@drawable/flat_selector"
                 android:onClick="signUp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentBottom="true" android:layout_alignParentStart="true"/>
         <Button
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -57,8 +56,7 @@
                 android:textColor="#ffffff"
                 android:background="@drawable/flat_selector"
                 android:onClick="signUp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_above="@+id/cancel" android:layout_alignParentStart="true"/>
 
     </RelativeLayout>
 </LinearLayout>
