--- a/res/layout/challenge.xml
+++ b/res/layout/challenge.xml
@@ -9,7 +9,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="0.5"
-            android:text="Register Match"
+            android:text="Register Exhibition Match"
             android:id="@+id/challengePlayer"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/flat_selector"
