--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -5,8 +5,37 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Rules"
+            android:padding="25dp"
+            android:id="@+id/rules" android:layout_gravity="center_horizontal"/>
+
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/scrollView" android:layout_gravity="center_horizontal"/>
+            android:id="@+id/scrollView" android:layout_gravity="center_horizontal">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="1. No spinning!"
+                    android:padding="10dp"
+                    android:layout_gravity="center_horizontal"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="2. Don't score at first "
+                    android:padding="10dp"
+                    android:id="@+id/textView" android:layout_gravity="center_horizontal"/>
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
